--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/smallg/react-practice#readme",
   "dependencies": {
     "jquery": "^2.2.2",
+    "nprogress": "^0.2.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-marked-markdown": "^1.1.1"
